# chijin

./: .gitignore  05_chijin.step  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  build_delegation.rs  makefile  仕様書.md
.claude/: settings.local.json
cpp/: wrapper.cpp  wrapper.h
docker/: Dockerfile_aarch64-unknown-linux-gnu  Dockerfile_x86_64-pc-windows-gnu  Dockerfile_x86_64-pc-windows-gnullvm  Dockerfile_x86_64-unknown-linux-gnu  Dockerfile_x86_64-unknown-linux-musl  Makefile  README.md  entrypoint.sh
docs/: 20260303-stretch_colored考察_jp.md  20260304-color_XDE_STEP実装記録_jp.md  20260304-color_feature実装計画.md
examples/: 01_primitives.rs  02_boolean.rs  02_transform.rs  02_write_read.rs  03_boolean.rs  03_transform.rs  04_boolean.rs  04_stretch.rs  05_chijin.rs  05_extrude.rs  05_screw.rs  06_loft.rs  07_sweep.rs  08_bspline.rs  08_gordon_surface.rs  08_shell.rs  10_chijin.rs  chijin.rs  markdown.rs  stretch.rs
notes/: 20260406-brep-trailing-color-format_jp.md  20260408-SolidExt統一トレイト計画.md  20260410-Edge応用先とステラレーターCAD方針.md  20260411-Solid_gordon実装.md  20260413-CAD表現方式と中性子輸送系統誤差.md  20260413-Gordon_surface数学と自力実装方針.md  20260413-検証フレームワーク論文計画.md  20260416-occt_cxx_stub_edge_cases.md
sandbox-cadquery/: .gitignore  Makefile  example_extrude_with_holes.py  example_screw.py  main.py  pyproject.toml
sandbox-wasm/: Cargo.toml  makefile
src/: color.rs  color_ffi.rs  edge.rs  error.rs  face.rs  ffi.rs  io.rs  iterators.rs  lib.rs  mesh.rs  shape.rs  solid.rs  stream.rs  traits.rs  utils.rs
tests/: brep.rs  color.rs  face.rs  gordon.rs  integration.rs  (+9 more)
(+22 files in other folders)
