[package]
name = "chijin"
version = "0.1.0"
edition = "2021"
description = "Minimal Rust bindings for OpenCASCADE (OCC 7.9)"

[features]
default = ["buildin"]
# Download and build OCCT 7.9.3 from source during cargo build
buildin = []
# Use system-installed OCCT via OCCT_ROOT environment variable
OCCT_ROOT = []

[dependencies]
cxx = "1"
glam = { version = "0.29", features = ["std"] }
thiserror = "2"

[build-dependencies]
cxx-build = "1"
# download OpenCASCADE
ureq = "3"
# extract tar.gz
libflate = "2"
tar = "0.4"
cmake = "0.1"
